# trace

./: .gitignore  CLAUDE.md  HANDOFF_PROMPT.md  README.md  STATUS.md  plan.md  progress.txt  pyproject.toml
app/: README.md
contracts/: destructive_keywords.json  run-metadata.schema.json  skill-meta.schema.json  trajectory.schema.json
dashboard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  format.ts  main.tsx  router.ts  styles.css  types.ts  ws.ts
dashboard/src/components/: DailyChart.tsx  EventMixChart.tsx  Header.tsx  HourChart.tsx  MetricCards.tsx  TopAppsChart.tsx  TopWindowsTable.tsx  theme.ts
dashboard/src/tabs/: BrowserAgentTab.tsx  RunsTab.tsx  StatsTab.tsx
fixtures/: README.md
fixtures/llm_responses/: README.md  runner_calendar_block.json  runner_finder_organize.json  runner_gmail_reply.json  runner_notes_daily.json  runner_slack_status.json
fixtures/prompt_examples/: example_01.txt  example_02.txt
fixtures/skills/: README.md
fixtures/skills/calendar_block/: SKILL.md  skill.meta.json
fixtures/skills/finder_organize/: SKILL.md  skill.meta.json
fixtures/skills/gmail_reply/: SKILL.md  skill.meta.json
fixtures/skills/notes_daily/: SKILL.md  skill.meta.json
fixtures/skills/slack_status/: SKILL.md  skill.meta.json
fixtures/trajectories/00000000-0000-0000-0000-000000000001/: events.jsonl  metadata.json
fixtures/trajectories/00000000-0000-0000-0000-000000000002/: events.jsonl  metadata.json
fixtures/trajectories/00000000-0000-0000-0000-000000000003/: events.jsonl  metadata.json
fixtures/trajectories/00000000-0000-0000-0000-000000000004/: events.jsonl  metadata.json
fixtures/trajectories/00000000-0000-0000-0000-000000000005/: events.jsonl  metadata.json
fixtures/trajectories/calendar_block/: events.jsonl  metadata.json
fixtures/trajectories/finder_organize/: events.jsonl  metadata.json
fixtures/trajectories/gmail_reply/: events.jsonl  metadata.json
fixtures/trajectories/notes_daily/: events.jsonl  metadata.json
fixtures/trajectories/slack_status/: events.jsonl  metadata.json
gateway/: main.py
scripts/: check_contracts.sh  check_fixtures.sh  demo_pipeline.py  demo_recording.py  generate_synthetic_fixtures.py  regenerate_fixtures.sh
scripts/ralph/: .last-branch  CLAUDE.md  README.md  prd.json  progress.txt  ralph.sh
scripts/ralph/archive/2026-04-22-feature/agent-qualification/: progress.txt
services/recorder/: README.md  pyproject.toml
services/recorder/src/recorder/: __init__.py  __main__.py  api.py  ax_resolver.py  browser_context.py  event_tap.py  focus_tracker.py  index_db.py  keyframe_policy.py  permissions.py  schema.py  screenshot.py  session.py  stats.py  storage.py  text_aggregator.py  writer.py
services/runner/: AGENTS.md  README.md  pyproject.toml
services/runner/runner/: api.py
services/runner/src/runner/: __init__.py  __main__.py  agent_runtime.py  api.py  browser_dom_dispatcher.py  browser_dom_probe.py  budget.py  budget_config.py  claude_runtime.py  confirmation.py  coords.py  destructive.py  dispatcher.py  event_stream.py  execution_hints.py  execution_prompt.py  executor.py  input_adapter.py  kill_switch.py  live_input.py  live_screen.py  mcp_client.py  mcp_server.py  observing_writer.py  parser.py  paths.py  pre_action_gate.py  run_index.py  run_manager.py  run_writer.py  safety.py  schema.py  screen_source.py  skill_loader.py
services/synthesizer/: AGENTS.md  README.md  pyproject.toml
services/synthesizer/src/synthesizer/: __init__.py  __main__.py  api.py  budget.py  check_contracts.py  check_fixtures.py  destructive_matcher.py  draft.py  draft_prompt.py  llm_client.py  mcp_catalog.py  preprocess.py  revise.py  revise_prompt.py  schema.py  session.py  similarity.py  skill_doc.py  slug.py  trajectory_reader.py  writer.py
services/synthesizer/synthesizer/: schema.py  skill_doc.py  trajectory_reader.py
tests/: conftest.py
tests/integration/: test_contracts_valid.py  test_gateway_healthz.py
tests/recorder/: README.md  conftest.py  smoke.md  test_api.py  test_ax_resolver.py  test_browser_context.py  test_e2e.py  test_event_tap.py  test_fixtures.py  test_focus_tracker.py  test_index_db.py  test_keyframe_policy.py  test_permissions.py  test_scaffold.py  test_schema.py  test_screenshot.py  test_session.py  test_stats.py  test_text_aggregator.py  test_writer.py
tests/runner/: conftest.py  test_agent_runtime.py  test_api.py  test_browser_dom_dispatcher.py  test_browser_dom_executor.py  test_browser_dom_probe.py  test_budget.py  test_budget_config.py  test_confirmation.py  test_coords.py  test_destructive.py  test_dispatcher.py  test_e2e_fake.py  test_execution_hints.py  test_execution_prompt.py  test_executor.py  test_input_adapter.py  test_kill_switch.py  test_live_input.py  test_live_screen.py  test_mcp_client.py  test_mcp_dispatch.py  test_mcp_server.py  test_observing_writer_dom_frame.py  test_parser.py  test_pre_action_gate.py  test_replay_correctness.py  test_run_index.py  test_run_writer.py  test_safety.py  test_schema.py  test_screen_source.py  test_skill_loader.py
tests/synthesizer/: README.md  conftest.py  test_api.py  test_budget.py  test_contract_check.py  test_destructive_matcher.py  test_draft.py  test_e2e_fake.py  test_execution_hints.py  test_golden_fixtures.py  test_llm_client.py  test_mcp_catalog.py  test_preprocess.py  test_real_smoke.py  test_revise.py  test_scaffold.py  test_schema.py  test_session.py  test_similarity.py  test_skill_doc.py  test_slug.py  test_trajectory_reader.py  test_writer.py
