[project]
name = "trace-recorder"
version = "0.1.0"
description = "Trace Module 1: captures macOS user actions into a trajectory."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "jsonschema>=4.23",
    # macOS capture stack. These install fine on macOS; on non-macOS CI they
    # resolve to no-op wheels for the non-darwin markers PyObjC ships with.
    "pyobjc-framework-Cocoa>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.3 ; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.3 ; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]
