[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-runner"
version = "0.1.0"
description = "Trace Module 3: executes a SKILL.md via Claude computer-use with safety gates."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "jsonschema>=4.23",
    "pydantic>=2.8",
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-ApplicationServices>=10.3",
    "websockets>=13",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.6",
    "pillow>=10.4",
    "types-jsonschema>=4.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/runner"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["Cocoa.*", "Quartz.*", "ApplicationServices.*", "AppKit.*"]
ignore_missing_imports = true
